--- a/examples/kubernetes/image/docker/Dockerfile
+++ b/examples/kubernetes/image/docker/Dockerfile
@@ -1,6 +1,11 @@
 FROM fedora:22
 
-RUN dnf -y install postgresql-server postgresql hostname
+RUN dnf check-update && dnf upgrade -y && dnf clean all -y
+
+RUN dnf -y install  https://download.postgresql.org/pub/repos/yum/9.5/fedora/fedora-23-x86_64/pgdg-fedora95-9.5-3.noarch
+.rpm
+
+RUN dnf -y install postgresql-server-9.5 postgresql-9.5 hostname
 
 RUN dnf clean all
 
