--- a/build
+++ b/build
@@ -1,8 +1,8 @@
 #!/bin/bash
 
-set -e
+set -x
 
-BASEDIR=$(readlink -f $(dirname $0))
+BASEDIR=${PWD}
 BINDIR=${BASEDIR}/bin
 
 if [ $PWD != $BASEDIR ]; then
