--- a/examples/kubernetes/b-stolon-sentinel.yaml
+++ b/examples/kubernetes/b-stolon-sentinel.yaml
@@ -1,21 +1,28 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: stolon-sentinel-rc
+  annotations:
+    description: Postgres HA
+    contact: Michael Bishop
 spec:
   replicas: 1
   selector:
-    name: stolon-sentinel
+    matchLabels:
+      name: stolon-sentinel
   template:
     metadata:
       labels:
         name: stolon-sentinel
         stolon-cluster: "kube-stolon"
         stolon-sentinel: "true"
+      annotations:
+        description: Postgres HA
+        contact: Michael Bishop
     spec:
       containers:
       - name: stolon-sentinel
-        image: sorintlab/stolon:master
+        image: sorintlab/stolon:latest
         env:
           - name: SENTINEL
             value: "true"
@@ -34,3 +41,10 @@ spec:
             value: "default"
         ports:
           - containerPort: 6431
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: 0.5
+          limits:
+            memory: "2Gi"
+            cpu: 1.5
