--- a/examples/kubernetes/stolon-keeper.yaml
+++ b/examples/kubernetes/stolon-keeper.yaml
@@ -1,7 +1,10 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: stolon-keeper-rc
+  annotations:
+    description: Postgres HA
+    contact: Michael Bishop
 spec:
   replicas: 1
   selector:
@@ -10,32 +13,42 @@ spec:
     metadata:
       labels:
         name: stolon-keeper
-        stolon-cluster: "kube-stolon"
+        stolon-cluster: "kube-postgres"
         stolon-keeper: "true"
+      annotations:
+        description: Postgres HA
+        contact: Michael Bishop
     spec:
       containers:
       - name: stolon-keeper
-        image: sorintlab/stolon:master
+        image: sorintlab/stolon:latest
         env:
           - name: KEEPER
             value: "true"
           - name: STKEEPER_CLUSTER_NAME
           # TODO(sgotti) Get cluster name from "stoloncluster" label using a downward volume api instead of duplicating the name here
-            value: "kube-stolon"
+            value: "kube-postgres"
           - name: STKEEPER_STORE_BACKEND
-            value: "etcd" # Or consul
+            value: "consul" # Or consul
           - name: STKEEPER_STORE_ENDPOINTS
-            value: "10.245.1.1:2379"
+            value: "consul.corp.advisorconnect.co:8500"
             # Enable debugging
           - name: STKEEPER_DEBUG
             value: "true"
           - name: STKEEPER_INITIAL_PG_SU_USERNAME
-            value: "stolon"
+            value: "postgres"
           - name: STKEEPER_INITIAL_PG_SU_PASSWORD_FILE
             value: "/etc/secrets/stolon/password"
         ports:
           - containerPort: 5431
           - containerPort: 5432
+        resources:
+          requests:
+            memory: "24Gi"
+            cpu: 6
+          limits:
+            memory: "32Gi"
+            cpu: 12
         volumeMounts:
         - mountPath: /stolon-data
           name: data
@@ -43,7 +56,9 @@ spec:
           name: stolon
       volumes:
         - name: data
-          emptyDir: {}
+          persistentVolumeClaim:
+            pdName: postgres-cluster-data-1-claim
+            fsType: ext4
         - name: stolon
           secret:
             secretName: stolon
